Добавлен обработчик события keypress, распознаются левая и правая стрелки

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 	var TimeId4 = setInterval(Destroy, 100)
 	var TimeId5 = setInterval(Show, 100);
 
+	addEventListener("keypress", arrKey);
+
 	function Test() {
 		console.log("test!!");
 	}
 
-	Destroy(pole);
-	Show();
 </script>
 </body>
 </html>
