--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<title>Тетрис v0.1.1</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	<script type="text/javascript" src="game.js"></script>
 </head>
 <body>
 <script>
 	var pole = Init();
 	var points = 0;
-	Show();
 	Add();
-	var TimeId1 = setInterval(Show, 200);
-	var TimeId2 = setInterval(Sdvig, 200);
+	var TimeId1 = setInterval(Show, 30);
+	var TimeId2 = setInterval(Sdvig, 30);
 	
-	addEventListener("keypress", arrKey);
+	addEventListener("keydown", arrKey);
 
 </script>
 </body>
