--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 <script>
-	var lines = 20;
+	var lines = 18;
+	var temp = 100;
 	var pole = Init();
 	var points = 0;
 	Add();
-	var TimeId1 = setInterval(Show, 100);
-	var TimeId2 = setInterval(Sdvig, 100);
+	var TimeId1 = setInterval(Add, temp*10);
+	var TimeId2 = setInterval(Sdvig, temp);
 	
 	addEventListener("keydown", arrKey);
 
