Добавлен выбор уровня сложности (недоработана графика).

--- a/index.html
+++ b/index.html
@@ -10,15 +10,9 @@
 <body>
 <script>
 	var lines = 18;
-	var temp = 100;
 	var pole = Init();
 	var points = 0;
-	Add();
-	var TimeId1 = setInterval(Add, temp*10);
-	var TimeId2 = setInterval(Sdvig, temp);
-	
-	addEventListener("keydown", arrKey);
-
+	Start();
 </script>
 </body>
 </html>
