--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
 	<script type="text/javascript" src="game.js"></script>
 </head>
 <body>
@@ -14,6 +15,7 @@
 	var points = 0;
 	var TimeId1;
 	var TimeId2;
+	var GameOver = false;
 	Start();
 </script>
 </body>
